<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exercise4_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercises.Exercise4Fragment">

    <LinearLayout
        android:id="@+id/exercise4_layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/exercise4_edit_argument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/exercise4_hint_number"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/exercise4_edit_timeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/exercise4_hint_timeout"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/exercise4_button_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/white"
            android:padding="24dp"
            android:text="@string/exercise4_calculate" />

        <TextView
            android:id="@+id/exercise4_text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</ScrollView>